kube-objects/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: auth-web
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: auth-web
        tier: frontend
    spec:
      containers:
        - name: frontend
          image: holyjack/auth-web-frontend
          ports: 
          - name: http
            containerPort: 8080
          imagePullPolicy: Always
