kube-objects/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: auth-web
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
